# Kongnitive-EdgeMCP

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  MCP_AGENT_CONFIG.md  README.md  README.zh-CN.md  partitions_ota.csv  partitions_ota_2mb.csv  sdkconfig.defaults
components/lua/: CMakeLists.txt  download_lua.sh
doc/: TODO.md  contribution.md
main/: CMakeLists.txt  Kconfig.projbuild  jsonrpc.c  jsonrpc.h  lua_runtime.c  lua_runtime.h  main.c  mcp_log.c  mcp_log.h  mcp_ota.c  mcp_ota.h  mcp_protocol.c  mcp_protocol.h  mcp_server.c  mcp_server.h  mcp_tools.c  mcp_tools.h  wifi_manager.c  wifi_manager.h
main/default_scripts/: default_bindings.lua  default_di_container.lua  default_main.lua  default_provider_ssd1306.lua
